@@ -2148,7 +2148,7 @@ for help with detailed comparisons~\cite{comparison} with the codes
 {\tt SUSPECT}, {\tt ISAJET} and {\tt SPHENO},
 S.~Akula, P.~Athron, M.~Baak, M.~Badziak, 
 G.~B\'elanger, F.~Borzumati, F.~Boudjema, F.~Brummer, M.~Catalan, A.~Casas, 
-M.~Eads,  
+M.~Eads, J.~Evans,
 M.~Hamer,
 J.~Hetherington, M.~Ibe, M.~Iskrzynski, J.~Kersten, S.~Knapen, S.~Kom,
 S.~Krippendorf, S.~Kulkarni, K.~Ishikawa, 
