@@ -10,4 +10,5 @@ be unification scale), to MssmSoftsusy object for convenience.
 <li> 29/8/13 Difference between 2 MssmSoftsusy objects now changed: if a mass
 is less than 1 GeV, it is the ABSOLUTE mass difference that is returned by
 sumTol, not the relative mass difference.
-<li> 29/8/13 Problem with SLHA2 when you fix tanb to be at MX (which is MSUSY) now fixed.
+<li> 29/8/13 Problem with SLHA when you fix tanb to be at MX (which is MSUSY) now fixed.
+<li> 29/8/13 SLHA2 problem with output and ordering of squark/slepton masses fixed. Previously, it would occasionally give two identical masses when it shouldn't. Thanks to J Evans.
